[gd_scene load_steps=5 format=3 uid="uid://bliaualby1u16"]

[ext_resource type="Script" uid="uid://ctdby1us18hvc" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://b6ty0jcne355t" path="res://fonts/Xolonium-Regular.ttf" id="2_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="scoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -120.0
offset_right = 0.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "DODGE THE CREEPS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="startButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -140.0
offset_right = 122.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "START"

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
