extends CanvasLayer

# Notifies `Main` node that the button has been pressed
signal start_game

func show_message(text):
	$message.text = text
	$message.show()
	$messageTimer.start()

func show_game_over():
	show_message("Game Over")
	# Wait until the MessageTimer has counted down.
	await $messageTimer.timeout

	$message.text = "Dodge the Creeps!"
	$message.show()
	# Make a one-shot timer and wait for it to finish.
	await get_tree().create_timer(1.0).timeout
	$startButton.show()

func update_score(score):
	$scoreLabel.text = str(score)


func _on_start_button_pressed():
	$startButton.hide()
	start_game.emit()

func _on_message_timer_timeout():
	$message.hide()
